// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizerSet: "blocks" disabling delete 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "~~strikethrough~~",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`tokenizerSet: "blocks" disabling emphasis 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "*emphatic **strong** emphatic*",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`tokenizerSet: "blocks" disabling inlineCode 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "\`const js = true \`",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`tokenizerSet: "inlines" disabling block tokenizer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "#  heading 1",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
